--- a/index.html
+++ b/index.html
@@ -6,23 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./css/bootstrap.css" type="text/css" />
-    <title>Hello, world!</title>
-    <style>
-    .container {
-      border: 1px solid red;
-    }
-    .container-fluid {
-      border: 1px solid green;
-    }
+    <link rel="stylesheet" href="./css/main.css" type="text/css" />
+    <title>home</title>
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Hello, world!</h1>
+      <nav class="navbar navbar-expand-lg">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" width="267" height="58" alt="">
+        </a>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+          <form class="form-inline">
+            <button type="button" class="btn btn-link">注册</button>
+            <button type="button" class="btn btn-link">登录</button>
+          </form>
+        </div>
+      </nav>
     </div>
     <br>
     <div class="container-fluid">
-      <h1>Good Morning!</h1>
+      <!-- <h1>Good Morning!</h1> -->
     </div>
 
     <script type="text/javascript" src="./bootstrap/js/jquery-3.2.1.slim.min.js"></script>
