--- a/index.html
+++ b/index.html
@@ -3,45 +3,89 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="./css/main.css" type="text/css" />
     <title>home</title>
     </style>
   </head>
   <body>
+    <!-- Header -->
     <div class="container">
-      <nav class="navbar navbar-expand-lg">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <nav class="navbar navbar-light navbar-expand-lg">
         <a class="navbar-brand" href="#">
           <img src="images/logo.png" width="267" height="58" alt="">
         </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item mr-lg-3 mr-xl-5 active">
+              <a class="nav-link" href="#">新 闻 <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+            <li class="nav-item mr-lg-3 mr-xl-5">
+              <a class="nav-link" href="#">竞 赛</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+            <li class="nav-item mr-lg-3 mr-xl-5">
+              <a class="nav-link" href="#">大 咖</a>
+            </li>
+            <li class="nav-item mr-lg-3 mr-xl-5">
+              <a class="nav-link" href="#">历 史</a>
+            </li>
+            <li class="nav-item mr-lg-3 mr-xl-5">
+              <a class="nav-link" href="#">院 校</a>
             </li>
           </ul>
           <form class="form-inline">
             <button type="button" class="btn btn-link">注册</button>
+            <span>|</span>
             <button type="button" class="btn btn-link">登录</button>
+            <button type="button" class="btn btn-link">EN</button>
           </form>
         </div>
       </nav>
     </div>
+    <!-- Banner -->
+    <div class="container-fluid" style="padding: 0">
+      <img src="images/home-banner.jpg" width="100%" alt="">
+    </div>
+
+    <!-- 热门竞赛 -->
     <br>
-    <div class="container-fluid">
-      <!-- <h1>Good Morning!</h1> -->
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <!-- 最新资讯 -->
+
+    <!-- Footer -->
+    <div class="footer">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <ul class="list-inline">
+              <li class="list-inline-item mr-4">
+                <a href="#">关于我们</a>
+              </li>
+              <li class="list-inline-item mr-4">
+                <a href="#">商务合作</a>
+              </li>
+              <li class="list-inline-item mr-4">
+                <a href="#">帮助中心</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-8">
+            <span class="mr-md-4">TELEPHONE & FAX&nbsp;&nbsp;+86 021 6258 5617&nbsp;&nbsp;+86 021 6258 5617-102</span>
+            <span class="nowrap">E-MAIL&nbsp;&nbsp;competition@youngbird.com.cn</span>
+            <span class="nowrap">沪ICP备 16055号-1|© 2016-2017 Design Verse 版权所有</span>
+          </div>
+        </div>
+
+      </div>
     </div>
 
     <script type="text/javascript" src="./bootstrap/js/jquery-3.2.1.slim.min.js"></script>
