--- a/index.html
+++ b/index.html
@@ -53,13 +53,262 @@
     </div>
 
     <!-- 热门竞赛 -->
-    <br>
+    <div class="container mt-7">
+      <div class="htitle text-center">
+        <span></span>
+        <h2>热门竞赛</h2>
+      </div>
+      <div class="category mb-1">
+        <div class="row justify-content-center">
+          <ul class="list-inline">
+            <li class="list-inline-item mr-4">
+              <div class="d-flex align-items-center">
+                <i class="icon icon-yellow mr-3"></i>
+                <span>即将开始</span>
+              </div>
+            </li>
+            <li class="list-inline-item mr-4">
+              <div class="d-flex align-items-center">
+                <i class="icon icon-pink mr-3"></i>
+                <span>开始报名</span>
+              </div>
+            </li>
+            <li class="list-inline-item mr-4">
+              <div class="d-flex align-items-center">
+                <i class="icon icon-rose mr-3"></i>
+                <span>即将截止</span>
+              </div>
+            </li>
+            <li class="list-inline-item mr-4">
+              <div class="d-flex align-items-center">
+                <i class="icon icon-red mr-3"></i>
+                <span>报名截止</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <button type="button" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</button>
+      <div class="row justify-content-between list-competiton mt-4">
+        <div class="col-md-12 col-lg-6 ">
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body mt-4">
+              <h5>2017 良辰美景</h5>
+              <h5>遮阳伞面设计竞赛</h5>
+              <span>截止日期/2017.5月-2017.10月</span>
+              <i class="icon icon-yellow"></i>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-6 ">
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body mt-4">
+              <h5>2017 良辰美景</h5>
+              <h5>遮阳伞面设计竞赛</h5>
+              <span>截止日期/2017.5月-2017.10月</span>
+              <i class="icon icon-yellow"></i>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-6 ">
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body mt-4">
+              <h5>2017 良辰美景</h5>
+              <h5>遮阳伞面设计竞赛</h5>
+              <span>截止日期/2017.5月-2017.10月</span>
+              <i class="icon icon-yellow"></i>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-lg-6 ">
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body mt-4">
+              <h5>2017 良辰美景</h5>
+              <h5>遮阳伞面设计竞赛</h5>
+              <span>截止日期/2017.5月-2017.10月</span>
+              <i class="icon icon-yellow"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
     <!-- 最新资讯 -->
+    <div class="container mt-7 pb-4">
+      <div class="htitle text-center">
+        <span></span>
+        <h2>最新资讯</h2>
+      </div>
+      <div class="row list-news mb-5">
+        <div class="col-md-6">
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="title">
+                坂雪岗科技城核心区
+                <br>
+                城市品质提升国际设计大赛
+              </div>
+              <div class="label">#城市规划设计、建筑、景观设计</div>
+              <p>
+                深圳，中国
+                <br>
+                报名截止日期：
+                <br>
+                2017年11月17日15：00
+              </p>
+              <i class="tag tag-green">新闻</i>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="title">
+                坂雪岗科技城核心区
+                <br>
+                城市品质提升国际设计大赛
+              </div>
+              <div class="label">#城市规划设计、建筑、景观设计</div>
+              <p>
+                深圳，中国
+                <br>
+                报名截止日期：
+                <br>
+                2017年11月17日15：00
+              </p>
+              <i class="tag tag-green">新闻</i>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="title">
+                坂雪岗科技城核心区
+                <br>
+                城市品质提升国际设计大赛
+              </div>
+              <div class="label">#城市规划设计、建筑、景观设计</div>
+              <p>
+                深圳，中国
+                <br>
+                报名截止日期：
+                <br>
+                2017年11月17日15：00
+              </p>
+              <i class="tag tag-green">新闻</i>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster-xl.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="title">
+                坂雪岗科技城核心区
+                <br>
+                城市品质提升国际设计大赛
+              </div>
+              <div class="label">#城市规划设计、建筑、景观设计</div>
+              <p>
+                主办方：深圳，中国
+                <br>
+                深圳，中国
+                <br>
+                报名截止日期：
+                <br>
+                2017年11月17日15：00
+              </p>
+              <i class="tag tag-orange">竞赛</i>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster-xl.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="title">
+                坂雪岗科技城核心区
+                <br>
+                城市品质提升国际设计大赛
+              </div>
+              <div class="label">#城市规划设计、建筑、景观设计</div>
+              <p>
+                主办方：深圳，中国
+                <br>
+                深圳，中国
+                <br>
+                报名截止日期：
+                <br>
+                2017年11月17日15：00
+              </p>
+              <i class="tag tag-pink">奖项</i>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="title">
+                坂雪岗科技城核心区
+                <br>
+                城市品质提升国际设计大赛
+              </div>
+              <div class="label">#城市规划设计、建筑、景观设计</div>
+              <p>
+                深圳，中国
+                <br>
+                报名截止日期：
+                <br>
+                2017年11月17日15：00
+              </p>
+              <i class="tag tag-green">新闻</i>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="title">
+                坂雪岗科技城核心区
+                <br>
+                城市品质提升国际设计大赛
+              </div>
+              <div class="label">#城市规划设计、建筑、景观设计</div>
+              <p>
+                深圳，中国
+                <br>
+                报名截止日期：
+                <br>
+                2017年11月17日15：00
+              </p>
+              <i class="tag tag-blue">工作</i>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
+            <div class="card-body">
+              <div class="title">
+                坂雪岗科技城核心区
+                <br>
+                城市品质提升国际设计大赛
+              </div>
+              <div class="label">#城市规划设计、建筑、景观设计</div>
+              <p>
+                深圳，中国
+                <br>
+                报名截止日期：
+                <br>
+                2017年11月17日15：00
+              </p>
+              <i class="tag tag-green">新闻</i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button type="button" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</button>
+    </div>
 
     <!-- Footer -->
     <div class="footer">
