--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item mr-lg-3 mr-xl-5 active">
-              <a class="nav-link" href="#">新 闻 <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">新 闻</a>
             </li>
             <li class="nav-item mr-lg-3 mr-xl-5">
               <a class="nav-link" href="#">竞 赛</a>
@@ -58,39 +58,29 @@
         <span></span>
         <h2>热门竞赛</h2>
       </div>
-      <div class="category mb-1">
+      <div class="category mb-4">
         <div class="row justify-content-center">
-          <ul class="list-inline">
-            <li class="list-inline-item mr-4">
-              <div class="d-flex align-items-center">
-                <i class="icon icon-yellow mr-3"></i>
-                <span>即将开始</span>
-              </div>
-            </li>
-            <li class="list-inline-item mr-4">
-              <div class="d-flex align-items-center">
-                <i class="icon icon-pink mr-3"></i>
-                <span>开始报名</span>
-              </div>
-            </li>
-            <li class="list-inline-item mr-4">
-              <div class="d-flex align-items-center">
-                <i class="icon icon-rose mr-3"></i>
-                <span>即将截止</span>
-              </div>
-            </li>
-            <li class="list-inline-item mr-4">
-              <div class="d-flex align-items-center">
-                <i class="icon icon-red mr-3"></i>
-                <span>报名截止</span>
-              </div>
-            </li>
-          </ul>
+          <div class="d-flex align-items-center mx-3">
+            <i class="icon icon-yellow mr-3"></i>
+            <span>即将开始</span>
+          </div>
+          <div class="d-flex align-items-center mx-3">
+            <i class="icon icon-pink mr-3"></i>
+            <span>开始报名</span>
+          </div>
+          <div class="d-flex align-items-center mx-3">
+            <i class="icon icon-rose mr-3"></i>
+            <span>即将截止</span>
+          </div>
+          <div class="d-flex align-items-center mx-3">
+            <i class="icon icon-red mr-3"></i>
+            <span>报名截止</span>
+          </div>
         </div>
       </div>
       <button type="button" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</button>
       <div class="row justify-content-between list-competiton mt-4">
-        <div class="col-md-12 col-lg-6 ">
+        <div class="col-md-12 col-lg-6 mb-4">
           <div class="card">
             <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
             <div class="card-body mt-4">
@@ -101,7 +91,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-lg-6 ">
+        <div class="col-md-12 col-lg-6 mb-4">
           <div class="card">
             <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
             <div class="card-body mt-4">
@@ -112,7 +102,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-lg-6 ">
+        <div class="col-md-12 col-lg-6 mb-4">
           <div class="card">
             <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
             <div class="card-body mt-4">
@@ -123,7 +113,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-lg-6 ">
+        <div class="col-md-12 col-lg-6 mb-4">
           <div class="card">
             <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
             <div class="card-body mt-4">
@@ -314,7 +304,7 @@
     <div class="footer">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-4">
+          <div class="col-lg-8">
             <ul class="list-inline">
               <li class="list-inline-item mr-4">
                 <a href="#">关于我们</a>
@@ -327,7 +317,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-8">
+          <div class="col-lg-16">
             <span class="mr-md-4">TELEPHONE & FAX&nbsp;&nbsp;+86 021 6258 5617&nbsp;&nbsp;+86 021 6258 5617-102</span>
             <span class="nowrap">E-MAIL&nbsp;&nbsp;competition@youngbird.com.cn</span>
             <span class="nowrap">沪ICP备 16055号-1|© 2016-2017 Design Verse 版权所有</span>
