--- a/sign-in.html
+++ b/sign-in.html
@@ -48,24 +48,30 @@
       </nav>
     </div>
     <!-- Banner -->
-    <div class="container-fluid" style="padding: 0">
-      <img src="images/banner-sign-up.jpg" width="100%" alt="">
+    <div class="container-fluid sub-banner" style="padding: 0;background: url(images/banner-sign-up.jpg) center center / cover no-repeat">
+      <div class="container">
+        <h1>_登录 <br>SIGN IN</h1>
+      </div>
     </div>
     <!-- Body -->
     <div class="container mt-7 pb-7 sign-up">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-md-12 d-none d-md-flex justify-content-center align-items-center logo">
           <img src="images/bird.jpg" alt="">
         </div>
         <div class="col-md-12">
           <form>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="邮箱/手机">
+              <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="邮箱/手机">
+              </div>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="密码（12位数字或字母）">
+              <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="密码（12位数字或字母）">
+              </div>
             </div>
-            <button type="button" class="btn btn-secondary btn-block">登录</button>
+            <button type="button" class="btn btn-secondary btn-block btn-lg">登录</button>
             <div class="row justify-content-between pl-2 pr-2 mt-2">
               <div>没有账号？<a href="#" class="text-underline">现在注册</a></div>
               <div><a href="#" class="text-underline">忘记密码</a></div>
