history list page

--- a/sign-up.html
+++ b/sign-up.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang="zh-CN">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./css/fontawesome.css" type="text/css" />
     <link rel="stylesheet" href="./css/main.css" type="text/css" />
     <title>sign up</title>
     </style>
@@ -85,12 +84,12 @@
             </div>
             <div class="form-group">
               <div class="input-group input-group-lg">
-                <input type="text" class="form-control" placeholder="密码（12位数字或字母）">
+                <input type="password" class="form-control" placeholder="密码（12位数字或字母）">
               </div>
             </div>
             <div class="form-group">
               <div class="input-group input-group-lg">
-                <input type="text" class="form-control" placeholder="确认密码">
+                <input type="password" class="form-control" placeholder="确认密码">
               </div>
             </div>
             <p class="text-right">
