--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang="zh-CN">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./css/fontawesome.css" type="text/css" />
     <link rel="stylesheet" href="./css/main.css" type="text/css" />
     <title>home</title>
     </style>
@@ -60,19 +59,19 @@
       </div>
       <div class="category mb-4">
         <div class="row justify-content-center">
-          <div class="d-flex align-items-center mx-3">
+          <div class="d-flex align-items-center mx-3 mb-2">
             <i class="icon icon-yellow mr-3"></i>
             <span>即将开始</span>
           </div>
-          <div class="d-flex align-items-center mx-3">
+          <div class="d-flex align-items-center mx-3 mb-2">
             <i class="icon icon-pink mr-3"></i>
             <span>开始报名</span>
           </div>
-          <div class="d-flex align-items-center mx-3">
+          <div class="d-flex align-items-center mx-3 mb-2">
             <i class="icon icon-rose mr-3"></i>
             <span>即将截止</span>
           </div>
-          <div class="d-flex align-items-center mx-3">
+          <div class="d-flex align-items-center mx-3 mb-2">
             <i class="icon icon-red mr-3"></i>
             <span>报名截止</span>
           </div>
