--- a/history-list.html
+++ b/history-list.html
@@ -59,7 +59,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="card mb-4 item-history">
-                <img class="card-img-top" src="images/sample/poster-history.png" alt="Card image cap">
+                <img class="card-img-top" src="images/sample/poster-history.jpg" alt="Card image cap">
                 <div class="card-body mt-4">
                   <div class="row head justify-content-between align-items-center">
                     <div class="label color-rose">Pattern design</div>
@@ -78,7 +78,7 @@
             </div>
             <div class="col-md-12">
               <div class="card mb-4 item-history">
-                <img class="card-img-top" src="images/sample/poster-history.png" alt="Card image cap">
+                <img class="card-img-top" src="images/sample/poster-history.jpg" alt="Card image cap">
                 <div class="card-body mt-4">
                   <div class="row head justify-content-between align-items-center">
                     <div class="label color-rose">Pattern design</div>
@@ -97,7 +97,7 @@
             </div>
             <div class="col-md-12">
               <div class="card mb-4 item-history">
-                <img class="card-img-top" src="images/sample/poster-history.png" alt="Card image cap">
+                <img class="card-img-top" src="images/sample/poster-history.jpg" alt="Card image cap">
                 <div class="card-body mt-4">
                   <div class="row head justify-content-between align-items-center">
                     <div class="label color-rose">Pattern design</div>
@@ -116,7 +116,7 @@
             </div>
             <div class="col-md-12">
               <div class="card mb-4 item-history">
-                <img class="card-img-top" src="images/sample/poster-history.png" alt="Card image cap">
+                <img class="card-img-top" src="images/sample/poster-history.jpg" alt="Card image cap">
                 <div class="card-body mt-4">
                   <div class="row head justify-content-between align-items-center">
                     <div class="label color-rose">Pattern design</div>
@@ -138,7 +138,7 @@
         </div>
         <div class="col-md-6">
           <div class="card mb-3 item-sub-history">
-            <img class="card-img-top" src="images/sample/poster-history.png" alt="Card image cap">
+            <img class="card-img-top" src="images/sample/poster-history.jpg" alt="Card image cap">
             <div class="card-body">
               <h4>2015 IN-BETWEEN<br>深圳蛇口太子湾公共文化建筑设计竞赛</h4>
               <p>
@@ -147,7 +147,7 @@
             </div>
           </div>
           <div class="card mb-3 item-sub-history">
-            <img class="card-img-top" src="images/sample/poster-history.png" alt="Card image cap">
+            <img class="card-img-top" src="images/sample/poster-history.jpg" alt="Card image cap">
             <div class="card-body">
               <h4>2015 IN-BETWEEN<br>深圳蛇口太子湾公共文化建筑设计竞赛</h4>
               <p>
