--- a/judges-list.html
+++ b/judges-list.html
@@ -38,6 +38,7 @@
             </li>
           </ul>
           <form class="form-inline">
+            <a href="#"><i class="fas fa-search"></i></a>
             <button type="button" class="btn btn-link">注册</button>
             <span>|</span>
             <button type="button" class="btn btn-link">登录</button>
