--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <button type="button" class="btn btn-link">注册</button>
             <span>|</span>
             <button type="button" class="btn btn-link">登录</button>
-            <button type="button" class="btn btn-link">EN</button>
+            <button type="button" class="btn btn-link pl-0">EN</button>
           </form>
         </div>
       </nav>
     </div>
     <!-- Banner -->
-    <div class="container-fluid" style="padding: 0">
+    <div class="container-fluid px-0">
       <img src="images/home-banner.jpg" width="100%" alt="">
     </div>
 
