--- a/news-detail.html
+++ b/news-detail.html
@@ -42,7 +42,7 @@
             <button type="button" class="btn btn-link">注册</button>
             <span>|</span>
             <button type="button" class="btn btn-link">登录</button>
-            <button type="button" class="btn btn-link">EN</button>
+            <button type="button" class="btn btn-link pl-0">EN</button>
           </form>
         </div>
       </nav>
