help center page

--- a/help-center.html
+++ b/help-center.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="./css/fontawesome.css" type="text/css" />
     <link rel="stylesheet" href="./css/main.css" type="text/css" />
-    <title>judge detail</title>
+    <title>help center</title>
     </style>
   </head>
   <body>
@@ -48,23 +48,29 @@
       </nav>
     </div>
     <!-- Banner -->
-    <div class="container-fluid judge-detail" style="padding: 0;background: #c8c8c8">
-      <div class="container banner d-flex py-4">
-        <div class="avatar">
-          <img src="images/sample/judge.jpg" width="100%" alt="">
-        </div>
-        <div class="desc pl-3 pl-lg-5">
-          <h1 class="color-black font-weight-bold">鲁求是</h1>
-          <h3 class="color-black font-weight-bold">设计师</h3>
-          <h3 class="color-black font-weight-bold">撒的接口理发师 && 啊手机号撒上</h3>
-          <p class="mb-0">阿斯顿狂欢节富士康 v 个收到回复 v 感觉，爱上法国 v 阿福讲噶是 v讲啊</p>
-        </div>
+    <div class="container-fluid sub-banner" style="padding: 0;background: url(images/banner-help-center.jpg) center center / cover no-repeat">
+      <div class="container">
+        <h1>_帮助中心 <br>HELP CENTER</h1>
       </div>
     </div>
     <!-- Body -->
-    <div class="container mt-6 pb-7">
-      <div class="editor">
-        <p>琚宾作品：阳朔Alila酒店致力于研究中国文化在建筑空间里的运用和创新，以个性化、独特的视觉语言来表达设计理念，以全新的视觉传达来解读中国文化元素。在作品中，将“当代性”、“文化性”、“艺术性”共溶、共生，以此作为设计语言用于空间表达。从传统与当下的共通、碰撞处，找寻设计的灵感；在艺术与生活的交错、和谐处，追求设计的本质。在历史的记忆碎片与当下思想的结合中，寻找设计文化的精神诉求。</p>
+    <div class="container mt-7 pb-7 sign-up">
+      <div class="row align-items-center">
+        <div class="col-md-10 d-none d-md-flex justify-content-center align-items-center logo">
+          <img src="images/bird.jpg" alt="">
+        </div>
+        <div class="col-md-12">
+          <p>Young Bird Plan真诚的希望能帮助没个热爱设计的人找到实现梦想的契机。因此，如果您有任何问题，请联系我们，Young Bird Plan将真诚的为您服务。</p>
+          <p>
+            <strong>联系方式：</strong>
+            <br>
+            微信：youngbirdplan
+            <br>
+            微博：YoungBirdPlan
+            <br>
+            邮箱：competition@youngbirdplan.com.cn
+          </p>
+        </div>
       </div>
     </div>
     <!-- Footer -->
