business cooperation page

--- a/search.html
+++ b/search.html
@@ -48,7 +48,7 @@
       </nav>
     </div>
     <!-- Banner -->
-    <div class="container-fluid sub-banner" style="padding: 0;background: url(images/banner-search.jpg) center center / cover no-repeat">
+    <div class="container-fluid sub-banner p-0" style="background: url(images/banner-search.jpg) center center / cover no-repeat">
       <div class="container">
         <h1>_搜 索 <br>SEARCH RESULTS</h1>
       </div>
