--- a/history-list.html
+++ b/history-list.html
@@ -48,7 +48,7 @@
       </nav>
     </div>
     <!-- Banner -->
-    <div class="container-fluid sub-banner" style="padding: 0;background: url(images/banner-history.jpg) center center / cover no-repeat">
+    <div class="container-fluid sub-banner p-0" style="background: url(images/banner-history.jpg) center center / cover no-repeat">
       <div class="container">
         <h1>_历 史 <br>HISTORY</h1>
       </div>
