--- a/judges-list.html
+++ b/judges-list.html
@@ -48,7 +48,7 @@
       </nav>
     </div>
     <!-- Banner -->
-    <div class="container-fluid sub-banner" style="padding: 0;background: url(images/banner-partners.jpg) center center / cover no-repeat">
+    <div class="container-fluid sub-banner p-0" style="background: url(images/banner-partners.jpg) center center / cover no-repeat">
       <div class="container">
         <h1>_大 咖 <br>PARTNERS</h1>
       </div>
