--- a/sign-in.html
+++ b/sign-in.html
@@ -48,7 +48,7 @@
       </nav>
     </div>
     <!-- Banner -->
-    <div class="container-fluid sub-banner" style="padding: 0;background: url(images/banner-sign-up.jpg) center center / cover no-repeat">
+    <div class="container-fluid sub-banner p-0" style="background: url(images/banner-sign-up.jpg) center center / cover no-repeat">
       <div class="container">
         <h1>_登录 <br>SIGN IN</h1>
       </div>
