--- a/judge-sign-in-step-3.html
+++ b/judge-sign-in-step-3.html
@@ -61,12 +61,12 @@
           <div class="avatar border bg-light-grey d-flex justify-content-center align-items-center flex-column">
             <i class="fas fa-plus"></i>
             <p class="mt-3">请上传您的公关照</p>
-            <input type="file" class="custom-file-input" id="avatar">
+            <input type="file" class="custom-file-input">
           </div>
         </div>
         <div class="col-md-18">
           <div class="input-group mb-3">
-            <textarea class="form-control"></textarea>
+            <textarea class="form-control" placeholder="描述"></textarea>
           </div>
           <div class="input-group input-group-lg mb-3">
             <div class="custom-file">
