fix home page style

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <h2>最新资讯</h2>
       </div>
       <div class="row list-news mb-5">
-        <div class="col-md-6">
+        <div class="col-md-8 col-lg-3-11">
           <div class="card">
             <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
             <div class="card-body">
@@ -193,7 +193,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-8 col-lg-5-11">
           <div class="card">
             <img class="card-img-top" src="images/sample/poster-xl.jpg" alt="Card image cap">
             <div class="card-body">
@@ -237,7 +237,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-8 col-lg-3-11">
           <div class="card">
             <img class="card-img-top" src="images/sample/poster.jpg" alt="Card image cap">
             <div class="card-body">
