--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container mt-7">
       <div class="htitle text-center">
         <span></span>
-        <h2>热门竞赛</h2>
+        <h1>热门竞赛</h1>
       </div>
       <div class="category mb-4">
         <div class="row justify-content-center">
@@ -78,7 +78,7 @@
           </div>
         </div>
       </div>
-      <button type="button" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</button>
+      <a href="#" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</a>
       <div class="row justify-content-between list-competiton mt-4">
         <div class="col-md-12 col-lg-6 mb-4">
           <div class="card">
@@ -131,7 +131,7 @@
     <div class="container mt-7 pb-4">
       <div class="htitle text-center">
         <span></span>
-        <h2>最新资讯</h2>
+        <h1>最新资讯</h1>
       </div>
       <div class="row list-news mb-5">
         <div class="col-md-8 col-lg-3-11">
@@ -195,7 +195,7 @@
         </div>
         <div class="col-md-8 col-lg-5-11">
           <div class="card">
-            <img class="card-img-top" src="images/sample/poster-xl.jpg" alt="Card image cap">
+            <div class="card-img-top" style="background: url(images/sample/poster-xl.jpg) center center / cover no-repeat"></div>
             <div class="card-body">
               <div class="title">
                 坂雪岗科技城核心区
@@ -216,7 +216,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/sample/poster-xl.jpg" alt="Card image cap">
+            <div class="card-img-top" style="background: url(images/sample/poster-xl.jpg) center center / cover no-repeat"></div>
             <div class="card-body">
               <div class="title">
                 坂雪岗科技城核心区
@@ -297,7 +297,7 @@
           </div>
         </div>
       </div>
-      <button type="button" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</button>
+      <a href="#" class="btn btn-outline-secondary mx-auto d-block btn-common">发现更多</a>
     </div>
 
     <!-- Footer -->
