--- a/judge-center.html
+++ b/judge-center.html
@@ -70,7 +70,7 @@
           <div class="col-12">
             <div class="row mx-auto info-container">
               <div class="col-6">
-                <div class="border bg-light-grey d-flex justify-content-center align-items-center flex-column">
+                <div class="d-flex justify-content-center align-items-center flex-column">
                   <i class="fas fa-plus"></i>
                   <input type="file" class="custom-file-input">
                 </div>
@@ -158,8 +158,9 @@
               <button class="btn btn-outline-secondary" type="button">上传</button>
             </div>
           </div>
+        </div>
+        <div class="row mx-auto">
           <button type="button" class="btn btn-secondary btn-lg btn-common float-right">保存</button>
-
         </div>
       </form>
     </div>
