--- a/participate-event-step-1.html
+++ b/participate-event-step-1.html
@@ -63,10 +63,10 @@
     <!-- Body -->
     <div class="container mt-7 pb-7 sign-up">
       <div class="row align-items-center">
-        <div class="col-md-12 d-none d-md-flex justify-content-center align-items-center logo">
+        <div class="col-md-10 d-none d-md-flex justify-content-start align-items-center logo">
           <img src="images/sample/event-logo.png" alt="">
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12 offset-md-2">
           <h1 class="text-center mb-4">报名信息填写</h1>
           <form>
             <div class="form-group">
