--- a/sign-in.html
+++ b/sign-in.html
@@ -56,10 +56,10 @@
     <!-- Body -->
     <div class="container mt-7 pb-7 sign-up">
       <div class="row align-items-center">
-        <div class="col-md-12 d-none d-md-flex justify-content-center align-items-center logo">
+        <div class="col-md-10 d-none d-md-flex justify-content-center align-items-center logo">
           <img src="images/bird.jpg" alt="">
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12 offset-md-2">
           <form>
             <div class="form-group">
               <div class="input-group input-group-lg">
