--- a/user-center.html
+++ b/user-center.html
@@ -65,55 +65,56 @@
     </div>
     <!-- Body -->
     <div class="container mt-5 pb-7 user-center-body">
-      <form action="" class="row">
-        <div class="col-12">
-          <div class="row mx-auto info-container">
-            <div class="col-6">
-              <div class="border bg-light-grey d-flex justify-content-center align-items-center flex-column">
-                <i class="fas fa-plus"></i>
-                <input type="file" class="custom-file-input">
-              </div>
-            </div>
-            <div class="col-18">
-              <div class="form-group">
-                <div class="input-group input-group-lg">
-                  <input type="text" class="form-control" placeholder="姓名">
+      <form action="">
+        <div class="row">
+          <div class="col-12">
+            <div class="row mx-auto info-container">
+              <div class="col-6">
+                <div class="d-flex justify-content-center align-items-center flex-column">
+                  <i class="fas fa-plus"></i>
+                  <input type="file" class="custom-file-input">
                 </div>
               </div>
-              <div class="form-group">
-                <div class="input-group input-group-lg">
-                  <input type="text" class="form-control" placeholder="手机">
+              <div class="col-18">
+                <div class="form-group">
+                  <div class="input-group input-group-lg">
+                    <input type="text" class="form-control" placeholder="姓名">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="input-group input-group-lg">
+                    <input type="text" class="form-control" placeholder="手机">
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="form-group">
-            <div class="input-group input-group-lg">
-              <input type="text" class="form-control" placeholder="身份">
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="身份">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="学校">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="星座">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="地址">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group input-group-lg">
+                <input type="text" class="form-control" placeholder="部门">
+              </div>
             </div>
           </div>
-          <div class="form-group">
-            <div class="input-group input-group-lg">
-              <input type="text" class="form-control" placeholder="学校">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="input-group input-group-lg">
-              <input type="text" class="form-control" placeholder="星座">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="input-group input-group-lg">
-              <input type="text" class="form-control" placeholder="地址">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="input-group input-group-lg">
-              <input type="text" class="form-control" placeholder="部门">
-            </div>
-          </div>
-        </div>
-        <div class="col-12">
+          <div class="col-12">
           <div class="form-group">
             <div class="input-group input-group-lg">
               <input type="text" class="form-control" placeholder="账号">
@@ -149,6 +150,10 @@
               <input type="text" class="form-control" placeholder="职位">
             </div>
           </div>
+        </div>
+        </div>
+        <div class="row mx-auto">
+          <button type="button" class="btn btn-lg btn-secondary btn-common">保存</button>
         </div>
       </form>
     </div>
