图片拖拽排序

--- a/work-edit.html
+++ b/work-edit.html
@@ -90,7 +90,7 @@
         <h1>上传作品</h1>
       </div>
       <p>您可以上传最多五张图片，支持的文件类型为：JPG/PNG，图片最大不超过20M。</p>
-      <div class="row justify-content-between work-upload mb-3">
+      <div class="row work-upload mb-3">
         <div class="col-lg-2-4">
           <div class="upload-container border bg-light-grey d-flex justify-content-center align-items-center flex-column">
             <i class="fas fa-plus"></i>
@@ -169,5 +169,7 @@
     <script type="text/javascript" src="./bootstrap/js/jquery-3.2.1.slim.min.js"></script>
     <script type="text/javascript" src="./bootstrap/js/popper.min.js"></script>
     <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/html.sortable.min.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
