--- a/judge-center.html
+++ b/judge-center.html
@@ -70,7 +70,7 @@
           <div class="col-12">
             <div class="row mx-auto info-container">
               <div class="col-6">
-                <div class="d-flex justify-content-center align-items-center flex-column">
+                <div class="custom-file-container d-flex justify-content-center align-items-center flex-column">
                   <i class="fas fa-plus"></i>
                   <input type="file" class="custom-file-input">
                 </div>
