--- a/work-edit.html
+++ b/work-edit.html
@@ -69,15 +69,17 @@
       </div>
       <div class="row mt-3 word-desc">
         <div class="col-md-12">
-          <div class="input-group input-group-lg">
-            <input type="text" class="form-control" placeholder="曾获奖项">
+          <div class="form-group">
+            <div class="input-group input-group-lg">
+              <input type="text" class="form-control" placeholder="曾获奖项">
+            </div>
           </div>
-          <div class="input-group mt-3">
+          <div class="input-group input-group-lg">
             <textarea class="form-control" placeholder="描述"></textarea>
           </div>
         </div>
-        <div class="col-md-12 mb-3">
-          <div class="poster border bg-light-grey d-flex justify-content-center align-items-center flex-column">
+        <div class="col-md-12">
+          <div class="poster custom-file-container d-flex justify-content-center align-items-center flex-column">
             <i class="fas fa-plus mb-3"></i>
             <p class="mb-1">点击上传封面</p>
             <p class="mb-0">图片最大不超过500KB</p>
@@ -92,7 +94,7 @@
       <p>您可以上传最多五张图片，支持的文件类型为：JPG/PNG，图片最大不超过20M。</p>
       <div class="row work-upload mb-3">
         <div class="col-lg-2-4">
-          <div class="upload-container border bg-light-grey d-flex justify-content-center align-items-center flex-column">
+          <div class="upload-container custom-file-container d-flex justify-content-center align-items-center flex-column">
             <i class="fas fa-plus"></i>
             <p class="mt-2">点击上传图片</p>
             <input type="file" class="custom-file-input">
@@ -101,28 +103,28 @@
           </div>
         </div>
         <div class="col-lg-2-4">
-          <div class="upload-container border bg-light-grey d-flex justify-content-center align-items-center flex-column">
+          <div class="upload-container custom-file-container d-flex justify-content-center align-items-center flex-column">
             <i class="fas fa-plus"></i>
             <p class="mt-2">点击上传图片</p>
             <input type="file" class="custom-file-input">
           </div>
         </div>
         <div class="col-lg-2-4">
-          <div class="upload-container border bg-light-grey d-flex justify-content-center align-items-center flex-column">
+          <div class="upload-container custom-file-container d-flex justify-content-center align-items-center flex-column">
             <i class="fas fa-plus"></i>
             <p class="mt-2">点击上传图片</p>
             <input type="file" class="custom-file-input">
           </div>
         </div>
         <div class="col-lg-2-4">
-          <div class="upload-container border bg-light-grey d-flex justify-content-center align-items-center flex-column">
+          <div class="upload-container custom-file-container d-flex justify-content-center align-items-center flex-column">
             <i class="fas fa-plus"></i>
             <p class="mt-2">点击上传图片</p>
             <input type="file" class="custom-file-input">
           </div>
         </div>
         <div class="col-lg-2-4">
-          <div class="upload-container border bg-light-grey d-flex justify-content-center align-items-center flex-column">
+          <div class="upload-container custom-file-container d-flex justify-content-center align-items-center flex-column">
             <i class="fas fa-plus"></i>
             <p class="mt-2">点击上传图片</p>
             <input type="file" class="custom-file-input">
